--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@testing-library/react": "^8.0.1",
     "classnames": "^2.2.6",
     "create-react-app": "^1.4.3",
+    "fetch-mock": "^9.0.0-beta.2",
     "h8k-design": "^1.0.8",
     "jest-dom": "^3.5.0",
-    "fetch-mock": "^9.0.0-beta.2",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^17.0.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^4.0.1",
     "save": "^2.3.1"
   },
   "scripts": {
@@ -29,7 +29,7 @@
     "chai": "^4.1.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "expect": "^21.2.1",
+    "expect": "^26.6.2",
     "jest-junit": "^3.3.0",
     "react-test-renderer": "^16.2.0"
   }
